<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="view_model"
            type="co.edu.unab.mgads.jdcn.applicht.viewModel.SingUpActivityViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SingUpActivity">

        <ImageView
            android:id="@+id/SingUp_im_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            />

        <TextView
            android:id="@+id/SingUp_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/App_Name"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:layout_marginVertical="14dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SingUp_im_image" />

        <EditText
            android:id="@+id/SingUp_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Form_Name"
            android:text="@={view_model.user.name}"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SingUp_tv_title" />

        <EditText
            android:id="@+id/SingUp_et_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Form_Document"
            android:text="@={view_model.user.document}"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SingUp_et_name" />

        <EditText
            android:id="@+id/SingUp_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Form_Email"
            android:text="@={view_model.user.email}"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SingUp_et_document" />

        <Button
            android:id="@+id/SingUp_bt_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Form"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/SingUp_et_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/SingUp_bt_volver"/>

        <Button
            android:id="@+id/SingUp_bt_volver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_return"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/SingUp_et_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/SingUp_bt_register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>