<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="lamp"
            type="co.edu.unab.mgads.jdcn.applicht.model.entity.Lamp" />
        <import type="co.edu.unab.mgads.jdcn.applicht.utils.BindingUtilsKt"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.FormLampActivity"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/Form_tv_title_addLamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/Add_Lamp"
                android:textColor="@color/purple_700"
                android:textSize="24sp"
                android:layout_marginVertical="14dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/Form_im_imagen_addLamp"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:image="@{lamp.image}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_launcher_background"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/Form_tv_title_addLamp"
                />

            <ImageButton
                android:id="@+id/Form_im_imagen_camera_addLamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintTop_toBottomOf="@id/Form_im_imagen_addLamp"
                app:layout_constraintLeft_toLeftOf="@id/Form_im_imagen_addLamp"
                android:layout_marginTop="10dp"
                />

            <ImageButton
                android:id="@+id/Form_im_imagen_gallery_addLamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintTop_toBottomOf="@id/Form_im_imagen_addLamp"
                app:layout_constraintRight_toRightOf="@id/Form_im_imagen_addLamp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/Form_et_name_addLamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Form_Name"
                android:text="@={lamp.name}"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Form_im_imagen_camera_addLamp" />


            <EditText
                android:id="@+id/Form_et_Imagen_addLamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Form_Url"
                android:text="@={lamp.image}"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="32dp"
                android:inputType="textUri"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Form_et_name_addLamp" />

            <EditText
                android:id="@+id/Form_et_description_addLamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Form_GPS"
                android:text="@={lamp.description}"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Form_et_Imagen_addLamp" />

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/Form_bt_register"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/Button_Form"
                app:layout_constraintTop_toBottomOf="@+id/Form_et_description_addLamp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/Form_bt_return"/>

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/Form_bt_return"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/Button_return"
                app:layout_constraintTop_toBottomOf="@id/Form_et_description_addLamp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/Form_bt_register"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>